기능별 체크, 체크한 것만 진행 분개 처리 완료